# research-idea-scout

./: .gitignore  CITATION.cff  README.md  pyproject.toml
configs/: profile_cv_domain_adaptation_example.yaml  profile_speechprivacy_accent_example.yaml  profile_template.yaml
docs/superpowers/plans/: 2026-06-16-asset-library.md
docs/superpowers/specs/: 2026-06-16-asset-library-design.md
examples/: example_input.jsonl
idea_scout/: assets.py  auto_collect.py  check_progress.py  codex_idea_score.py  discover_code.py  enhance_insights.py  export_assets.py  export_rankings.py  extract_assets.py  filter_candidates.py  full_pipeline.py  import_bestpaper_manifest.py  ingest_pdf.py  io_utils.py  llm_review_assets.py  prepare_portal_ready.py  profile.py  run_autoretry.py  translate_results.py  verify_code.py
scripts/: auto_scout.py  check_progress.py  discover_code.py  enhance_insights.py  export_assets.py  export_rankings.py  extract_assets.py  filter_candidates.py  full_scout.py  import_bestpaper_manifest.py  ingest_pdf.py  llm_review_assets.py  prepare_portal_ready.py  run_autoretry.py  score_with_codex.py  translate_results.py  verify_code.py
tests/: test_asset_flow.py  test_asset_readability.py  test_auto_collect.py  test_codex_idea_score.py  test_discovery_and_insights.py  test_full_pipeline.py  test_llm_review_assets.py  test_translate_results.py  test_web_portal_bilingual.py  test_web_scout_frontend.py
web/: import_jsonl.py
web/app/: main.py
web/app/static/: style.css
web/app/templates/: article_detail.html  articles.html  asset_detail.html  assets.html  (+3 more)
