[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "idea-scout"
version = "0.1.0"
description = "Profile-guided cross-domain research idea discovery with LLM-based paper scoring"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0"]
authors = [{name = "Yangyang Qu"}]
license = {text = "MIT"}

[tool.setuptools.packages.find]
include = ["idea_scout*"]
